Crash - select + drag on empty space #69785

Closed
opened 2019-09-12 10:48:43 +02:00 by Marcin Twarowski · 9 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-11 21:31, hash: 1e375ab5a1

Short description of error
Blender crashes when you try to select and drag on empty space in edit mode.

Exact steps for others to reproduce the error

  • Switch to right click select in Preferences > Keymap.
  • Switch to edit mode.
  • Press (hold) right mouse button somewhere on the empty space of viewport and drag the mouse.
    Attached .blend file:
    select_drag_empty_crash.blend
    Open it. Press and drag right mouse button on the empty space.
**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-11 21:31, hash: `1e375ab5a1` **Short description of error** Blender crashes when you try to select and drag on empty space in edit mode. **Exact steps for others to reproduce the error** - Switch to right click select in Preferences > Keymap. - Switch to edit mode. - Press (hold) right mouse button somewhere on the empty space of viewport and drag the mouse. Attached .blend file: [select_drag_empty_crash.blend](https://archive.blender.org/developer/F7738737/select_drag_empty_crash.blend) Open it. Press and drag right mouse button on the empty space.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

#69795 was marked as duplicate of this issue

#69795 was marked as duplicate of this issue
Member

Added subscribers: @mano-wii, @ideasman42, @lichtwerk

Added subscribers: @mano-wii, @ideasman42, @lichtwerk
Member

Can confirm. Probably caused by 3bd4f229be
CC @ideasman42
CC @mano-wii

1  free                                                                    0x7ffff7cf86da 
2  MEM_lockfree_freeN                        mallocn_lockfree_impl.c  157  0x2f2c890      
3  createTransEditVerts                      transform_convert_mesh.c 909  0x3c3c0dc      
4  createTransData                           transform_convert.c      2575 0x3c246b4      
5  initTransform                             transform.c              2415 0x3bf6619      
6  transformops_data                         transform_ops.c          382  0x3c65e84      
7  transform_invoke                          transform_ops.c          498  0x3c661d2      
8  wm_operator_invoke                        wm_event_system.c        1440 0x31689f7      
9  wm_handler_operator_call                  wm_event_system.c        2280 0x316a965      
10 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c        2582 0x316b5cf      
11 wm_handlers_do_intern                     wm_event_system.c        2719 0x316bbeb      
12 wm_handlers_do                            wm_event_system.c        2978 0x316c96d      
13 wm_event_do_handlers                      wm_event_system.c        3431 0x316de40      
14 WM_main                                   wm.c                     417  0x316115a      
15 main                                      creator.c                491  0x2b0e6e6  
Can confirm. Probably caused by 3bd4f229be CC @ideasman42 CC @mano-wii ``` 1 free 0x7ffff7cf86da 2 MEM_lockfree_freeN mallocn_lockfree_impl.c 157 0x2f2c890 3 createTransEditVerts transform_convert_mesh.c 909 0x3c3c0dc 4 createTransData transform_convert.c 2575 0x3c246b4 5 initTransform transform.c 2415 0x3bf6619 6 transformops_data transform_ops.c 382 0x3c65e84 7 transform_invoke transform_ops.c 498 0x3c661d2 8 wm_operator_invoke wm_event_system.c 1440 0x31689f7 9 wm_handler_operator_call wm_event_system.c 2280 0x316a965 10 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2582 0x316b5cf 11 wm_handlers_do_intern wm_event_system.c 2719 0x316bbeb 12 wm_handlers_do wm_event_system.c 2978 0x316c96d 13 wm_event_do_handlers wm_event_system.c 3431 0x316de40 14 WM_main wm.c 417 0x316115a 15 main creator.c 491 0x2b0e6e6 ```

Added subscriber: @brecht

Added subscriber: @brecht

This is the problem:

/home/brecht/dev/worktree/source/blender/editors/transform/transform_convert_mesh.c: In function ‘createTransEditVerts’:
/home/brecht/dev/worktree/source/blender/editors/transform/transform_convert_mesh.c:909:7: warning: ‘mirror_bitmap’ may be used uninitialized in this function [-Wmaybe-uninitialized]
       MEM_freeN(mirror_bitmap);
       ^~~~~~~~~~~~~~~~~~~~~~~~
This is the problem: ``` /home/brecht/dev/worktree/source/blender/editors/transform/transform_convert_mesh.c: In function ‘createTransEditVerts’: /home/brecht/dev/worktree/source/blender/editors/transform/transform_convert_mesh.c:909:7: warning: ‘mirror_bitmap’ may be used uninitialized in this function [-Wmaybe-uninitialized] MEM_freeN(mirror_bitmap); ^~~~~~~~~~~~~~~~~~~~~~~~ ```

This issue was referenced by 492a7998d5

This issue was referenced by 492a7998d50840e2664c019e57bbf5ce99c6560e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-09-12 11:35:14 +02:00

Added subscriber: @toki46-3

Added subscriber: @toki46-3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69785
No description provided.