Fix T69785: crash dragging in empty space in edit mode